Fixed layout bug on <p> and <li> tags

--- a/Test2/wwwroot/css/site.css
+++ b/Test2/wwwroot/css/site.css
@@ -72,6 +72,8 @@ p {
 
 p, li {
   max-width: 50em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul,
